--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Your Name :: About Me</title>
+<title>Isaac Sutherland :: About Me</title>
 </head>
 <body>
 <div class="container">
 	<header>
             <div id="logo">
-                <h1><a href="#">Your Name</a></h1>
+                <h1><a href="#">Isaac Sutherland</a></h1>
         	</div>
         <nav>
             <ul>
