--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Isaac Sutherland :: About Me</title>
 <link rel="stylesheet" href="styles/mobile.css"/>
-<link rel="stylesheet" href="styles/desktop.css" media="only screen and (min-width: 720px)"
+<link rel="stylesheet" href="styles/desktop.css" media="only screen and (min-width: 720px)"/>
+<title>Isaac Sutherland :: About Me</title>
 </head>
 <body>
 <div class="container">
