--- a/qualifications.html
+++ b/qualifications.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="styles/mobile.css"/>
+<link rel="stylesheet" href="styles/desktop.css" media="only screen and (min-width: 720px)"/>
 <title>Your Name :: Qualifications</title>
 </head>
 <body>
@@ -23,7 +26,7 @@
 	<main>
 		<section>
         <h2>Qualifications</h2>
-			 <p><img src="images/dishTwo.jpg" alt=""></p>
+			 <p><img src="images/dishTwo.jpg" alt="" class="resize-img"></p>
 			 
              <table>
              <tr>
