--- a/skill-set.html
+++ b/skill-set.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="styles/mobile.css"/>
+<link rel="stylesheet" href="styles/desktop.css" media="only screen and (min-width: 720px)"/>
 <title>Your Name :: Skill Set</title>
 </head>
 <body>
