Added name and css to all html files

--- a/thank-you.html
+++ b/thank-you.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Martin Cooper :: Thank You</title>
+<title>Isaac Sutherland :: Thank You</title>
 </head>
 <body>
 <div class="container">
 	<header>
             <div id="logo">
-                <h1><a href="#">Your Name</a></h1>
+                <h1><a href="#">Isaac Sutherland</a></h1>
         	</div>
          <nav>
             <ul>
