--- a/skill-set.html
+++ b/skill-set.html
@@ -5,13 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="styles/mobile.css"/>
 <link rel="stylesheet" href="styles/desktop.css" media="only screen and (min-width: 720px)"/>
-<title>Your Name :: Skill Set</title>
+<title>Isaac Sutherland :: Skill Set</title>
 </head>
 <body>
 <div class="container">
     <header>
         <div id="logo">
-            <h1><a href="#">Your Name</a></h1>
+            <h1><a href="#">Isaac Sutherland</a></h1>
         </div>
         <nav>
             <ul>
