--- a/work-experience.html
+++ b/work-experience.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Your Name :: Work Experience</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="styles/mobile.css"/>
+<link rel="stylesheet" href="styles/desktop.css" media="only screen and (min-width: 720px)"/>
+<title>Isaac Sutherland :: Work Experience</title>
 </head>
 <body>
 <div class="container">
 	<header>
             <div id="logo">
-                <h1><a href="#">Your Name</a></h1>
+                <h1><a href="#">Isaac Sutherland</a></h1>
         	</div>
         <nav>
             <ul>
