--- a/contact-me.html
+++ b/contact-me.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Martin Cooper :: Contact Me</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="styles/mobile.css"/>
+<link rel="stylesheet" href="styles/desktop.css" media="only screen and (min-width: 720px)"/>
+<title>Isaac Sutherland :: Contact Me</title>
 </head>
 <body>
 <div class="container">
 	<header>
             <div id="logo">
-                <h1><a href="#">Your Name</a></h1>
+                <h1><a href="#">Isaac Sutherland</a></h1>
         	</div>
         <nav>
             <ul>
@@ -51,9 +54,9 @@
         </section>
 		<div class="sidebar">
                 <h2>Contact Details</h2>
-                <p>m.j.cooper@shu.ac.uk</p>
+                <p>isaac.sutherland@student.shu.ac.uk</p>
                 <p>0800 1234 1234</p>
-                <p>@mustbebuilt</p>
+                <p>@isaac238</p>
                 <address>My Address</address>
 	  </div>
 	</main>
