--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         	</div>
         <nav>
             <ul>
+                <li><img src="mcdonalds-mccrispy-4 product-header-desktop.jpeg" height=100px width="100px"/></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="qualifications.html">Qualifications</a></li>
                 <li><a href="skill-set.html">Skill Set</a></li>
